Calendar grid height fix to make event list overflow work properly, changed webkit scroll properties, changed event list styles to fit with scroll and selected items.

--- a/src/assets/scss/base/_scrollbar.scss
+++ b/src/assets/scss/base/_scrollbar.scss
@@ -1,7 +1,9 @@
 ::-webkit-scrollbar {
-  width: rem(10px);
-  background-color: scale-color($color: $gray-bg-color, $lightness: 40%);
+  width: rem(6px);
+  border-radius: rem(4px);
+  background-color: transparent;
   &-thumb {
-    background-color: $dark-gray-bg-color;
+    border-radius: rem(4px);
+    background-color: var(--primary-color);
   }
 }
